--- a/index.html
+++ b/index.html
@@ -1,1 +1,143 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Sudoku 25 – The Ultimate Sudoku App</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Helvetica Neue', sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+
+    header {
+      background-color: #fff;
+      padding: 2rem 1rem;
+      text-align: center;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+
+    header p {
+      margin: 0.5rem 0 1.5rem;
+      font-size: 1.2rem;
+      color: #666;
+    }
+
+    .cta-button {
+      padding: 0.75rem 1.5rem;
+      background-color: #007aff;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+      text-decoration: none;
+      transition: background-color 0.3s;
+    }
+
+    .cta-button:hover {
+      background-color: #005ecb;
+    }
+
+    .section {
+      padding: 3rem 1rem;
+      max-width: 1000px;
+      margin: auto;
+    }
+
+    .features {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2rem;
+      justify-content: center;
+      margin-top: 2rem;
+    }
+
+    .feature {
+      flex: 1 1 250px;
+      background: white;
+      padding: 1.5rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+      text-align: center;
+    }
+
+    .feature h3 {
+      margin-top: 0.5rem;
+      font-size: 1.2rem;
+    }
+
+    .screenshots {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1rem;
+    }
+
+    .screenshots img {
+      max-width: 200px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+
+    footer {
+      background-color: #f0f0f0;
+      text-align: center;
+      padding: 2rem 1rem;
+      font-size: 0.9rem;
+      color: #777;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Sudoku 25</h1>
+    <p>Challenge your brain with advanced statistics & beautiful design</p>
+    <a class="cta-button" href="https://apps.apple.com/app/your-app-id">Download on the App Store</a>
+  </header>
+
+  <section class="section">
+    <h2 style="text-align:center;">Why You'll Love Sudoku 25</h2>
+    <div class="features">
+      <div class="feature">
+        <h3>Smart Statistics</h3>
+        <p>Track your progress, average solve times, and mistake patterns.</p>
+      </div>
+      <div class="feature">
+        <h3>Clean Interface</h3>
+        <p>Enjoy a clutter-free, modern Sudoku experience with subtle animations.</p>
+      </div>
+      <div class="feature">
+        <h3>Adaptive Difficulty</h3>
+        <p>Play from easy to expert puzzles with true logic-based generation.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="section">
+    <h2 style="text-align:center;">App Preview</h2>
+    <div class="screenshots">
+      <img src="screenshot1.png" alt="Sudoku game screen">
+      <img src="screenshot2.png" alt="Statistics screen">
+      <img src="screenshot3.png" alt="Puzzle list screen">
+    </div>
+  </section>
+
+  <footer>
+    &copy; 2025 Sudoku 25. All rights reserved. | Made with ❤️ for Sudoku lovers
+  </footer>
+
+</body>
+</html>
 
