--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   <footer>
     &copy; 2025 Sudoku 25. All rights reserved.
     <br />
-    <a href="privacy.html">Privacy Policy</a>
+    <a href="privacy-policy.html">Privacy Policy</a>
   </footer>
 
 </body>
